--- a/ANINT_TP3.uproject
+++ b/ANINT_TP3.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{00041937-08D9-2298-5579-54868CA92A8B}",
+	"EngineAssociation": "4.26",
 	"Category": "",
 	"Description": ""
 }
